--- a/content/profile.html
+++ b/content/profile.html
@@ -94,22 +94,22 @@
                 <div class="g-nav-contents-box none2">
                   <ul class="g-nav-contents">
                     <li>
-                      <h2><a href="../content/birdcoffee.html">bird coffee</a></h2>
+                      <h2><span class="circle">1</span><a href="birdcoffee.html"> bird coffee</a></h2>
                     </li>
                     <li>
-                      <h2><a href="../content/konpake.html">こんなにかわいいパッケージ</a></h2>
+                      <h2><span class="circle">2</span><a href="konpake.html"> こんなにかわいいパッケージ</a></h2>
                     </li>
                     <li>
-                      <h2><a href="../content/fukushima.html">どのしまにする？</a></h2>
+                      <h2><span class="circle">3</span><a href="fukushima.html"> どのしまにする？</a></h2>
                     </li>
                     <li>
-                      <h2><a href="tennnoharuka.html">天ノはるか</a></h2>
+                      <h2><span class="circle">4</span><a href="tennnoharuka.html"> 天のはるか</a></h2>
                     </li>
                     <li>
-                      <h2><a href="EOEC.html">Enoshima Ocean Education Center</a></h2>
+                      <h2><span class="circle">5</span><a href="EOEC.html"> Enoshima Ocean Education Center</a></h2>
                     </li>
                     <li>
-                      <h2><a href="JOYL.html">JOYL</a></h2>
+                      <h2><span class="circle">6</span><a href="JOYL.html"> JOYL</a></h2>
                     </li>
                   </ul>
                 </div>
