--- a/bird_coffee/contact.html
+++ b/bird_coffee/contact.html
@@ -144,7 +144,7 @@
           <p>〒151-0052　東京都渋谷区代々木神園町2-1<br>tel:000-0000-0000<br>mail:info@birdcoffee.com</p>
         </div>
         <p><small>&copy;&nbsp;2024&nbsp;bird&nbsp;coffee&nbsp;company.</small></p>
-        <div class="pay-logo">
+        <!-- <div class="pay-logo">
           <ul>
             <li><img src="image/_made/Master.png" alt="master card"></li>
             <li><img src="image/_made/AMEX.png" alt="AMEX"></li>
@@ -154,7 +154,7 @@
             <li><img src="image/_made/LinePay.png" alt="LinePay"></li>
             <li><img src="image/_made/ApplePay.png" alt="ApplePay"></li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
   </footer>
